# turbovec-integration-ccc

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
compiler/: __init__.py  compiler.py  hot_swap_integration.py  room_grid.py
docs/: RESEARCH_HARDWARE.md  RESEARCH_PERCEPTION.md
ethos/: __init__.py  hardware_survey.py  thermal_auto_calibrate.py
grammar/: __init__.py  security_hardening.py
memory/: JOURNAL.md
nerve/: __init__.py  metronome_integration.py
nexus/: __init__.py  distributed_consensus.py
swarm/: thermal.py
tests/: test_distributed_consensus.py  test_grammar_security.py  test_hot_swap_integration.py  test_metronome_integration.py  test_thermal_auto_calibrate.py
