[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turbovec-integration-ccc"
version = "0.1.0"
description = "Turbovec integration branch for CCC"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
